--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
 }
 body {
+  display: flex;
+  flex-direction: column;
   background-color: #e6dace;
   font-family: Poppins, sans-serif;
   margin: auto;
@@ -157,16 +159,17 @@ h1 {
   height: 50px;
 }
 .about-container {
+  flex: 1;
   z-index: 1;
   position: relative;
   margin: auto;
   top: 20px;
-  width: 50%;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
   /* border-radius: 20px; */
-  background-color: white;
+  /* background-color: white; */
   /* box-shadow: 5px 5px 5px 5px rgba(100, 100, 100, 0.2); */
 }
 #profile-pic {
@@ -286,8 +289,6 @@ h1#hello {
 }
 .org_details li {
   list-style: none;
-}
-.project-details {
 }
 .image-preview {
   width: 100%;
